--- a/supportStaff/package.json
+++ b/supportStaff/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^7.1.4",
+    "@react-native-firebase/messaging": "^7.1.3",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-alert-pro": "^1.1.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-push-notification": "^3.5.2",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
